--- a/index.html
+++ b/index.html
@@ -149,15 +149,28 @@ body {
 
   </div>
   <div id="Work" class="Work">
-    <div class="Workdisc" style="padding: 100px;">
+    <div class="Workdisc"   >
     <div class="row">
-      <div class="col-md-6 card">
-          WORK EXPERIENCE
-          07/2018 – Present
-          Software Developer Helloverify India Pvt ltd     
-          Noida,India Is a Automated background veriﬁcation check company with their product called helloverify. Redesigned Helloverify the entire front-end product which is having bunch of packages and customization option, using Angular and state management tools including some promising libraries along with test. Maintained system to deploy data over AWS S3 bucket and utilizing EC2 servers for faster computation which led in improvement in the whole process by 40%. Actively involved in designing well structured Api's along with documentation using(Swagger) and node js libraries. Technologies: Angular,Jasmine, Node js, Express, jwt, oauth,swagger
-          
-      </div>
+      <div class="col-md-6 card ">
+        <div class="row container">
+        <div class="duration">
+           07/2018 – Present
+           </div>
+        <div class="postion">
+          Software Developer
+          </div>
+           <div class="company">
+           Helloverify India Pvt ltd
+           </div> 
+               </div>
+          <div class="discription p-3 m-2">
+              Noida,India Is a Automated background veriﬁcation check company with their product called helloverify. Redesigned Helloverify the entire front-end product which is having bunch of packages and customization option, using Angular and state management tools including some promising libraries along with test. Maintained system to deploy data over AWS S3 bucket and utilizing EC2 servers for faster computation which led in improvement in the whole process by 40%. Actively involved in designing well structured Api's along with documentation using(Swagger) and node js libraries.
+          </div>
+
+          <div class="technology">
+          Technologies: Angular,Jasmine, Node js, Express, jwt, oauth,swagger
+          </div>
+        </div>
       <div class="col-md-6 card"></div>
     </div>
     </div>
